# LangAlpha

./: .gitignore  CLAUDE.md  agent_config.yaml  alembic.ini  arch-diagram.html  docker-compose.yml  pyproject.toml  server.py
backtest_service/: Dockerfile  journal.py  main.py  memory.py  runner.py  schemas.py
deploy/: Dockerfile.dev
docs/adr/: 001-backtest-architecture.md
libs/ginlix_backtest/: pyproject.toml
libs/ginlix_backtest/src/ginlix_backtest/: __init__.py  calendar.py  data_feed.py  fees.py  indicators.py  strategy.py
libs/ginlix_backtest/src/ginlix_backtest/analysis/: regime.py  stats.py  tearsheet.py
libs/ginlix_backtest/src/ginlix_backtest/engine/: __init__.py  portfolio.py  rolling.py  signals.py  sweep.py
libs/ginlix_backtest/src/ginlix_backtest/io/: __init__.py  persist.py
libs/ginlix_data_sdk/: pyproject.toml
libs/ginlix_data_sdk/src/ginlix_data_sdk/: __init__.py  adjust.py  calendar.py  parquet_store.py  protocols.py  schemas.py
libs/ginlix_data_sdk/src/ginlix_data_sdk/providers/: __init__.py  yfinance_provider.py
libs/ptc-cli/: pyproject.toml
mcp_servers/: backtest_mcp_server.py
migrations/versions/: 001_initial_schema.py  010_backtest_schema.py
notebooks/examples/: candle_streak.ipynb  golden_cross.ipynb  monday_effect.ipynb
scripts/: backfill_us_daily.py
src/llms/: llm.py
src/utils/storage/: __init__.py
src/utils/tracking/: infrastructure_costs.py
web/src/components/Main/: Main.tsx
web/src/components/Sidebar/: Sidebar.tsx
web/src/pages/Backtests/: Backtests.css  Backtests.tsx
(+7 files in other folders)
